# AOSProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile.sh  tool.sh
BodyLoopExtractor/: BodyLoopExtractor.cpp  CMakeLists.txt
LoopFinder/: CMakeLists.txt  LoopFinder.cpp
ModMCA/: CMakeLists.txt  CodeRegionGenerator.cpp  llvm-mca2.cpp
ModMCA/Views/: DispatchStatistics.cpp  DispatchStatistics.h  InstructionInfoView.cpp  InstructionInfoView.h  RegisterFileStatistics.cpp  RegisterFileStatistics.h  ResourcePressureView.cpp  ResourcePressureView.h  RetireControlUnitStatistics.cpp  RetireControlUnitStatistics.h  SchedulerStatistics.cpp  SchedulerStatistics.h  SummaryView.cpp  SummaryView.h  TimelineView.cpp  TimelineView.h  View.cpp
Report/: Report.tex
Test/: 1  Out2.ll  Out2.s  compile.sh  out.ll  out2.ll  outNormal.ll  taffoOpt.sh  test.c  test.sh  test2.c
Test/blackscholes/: Makefile  run.sh
Test/blackscholes/data/output/: blackscholesTest_200K_00_blackscholes_out.data  blackscholesTest_200K_00_blackscholes_out.data.fixp  blackscholesTest_200K_01_blackscholes_out.data  blackscholesTest_200K_01_blackscholes_out.data.fixp  blackscholesTest_200K_B10_blackscholes_out.data  blackscholesTest_200K_B10_blackscholes_out.data.fixp  blackscholesTest_200K_B11_blackscholes_out.data  blackscholesTest_200K_B11_blackscholes_out.data.fixp  blackscholesTest_200K_B12_blackscholes_out.data  blackscholesTest_200K_B12_blackscholes_out.data.fixp  blackscholesTrain_100K_blackscholes_out.data.fixp
Test/fft/: Makefile
Test/inversek2j_00/: Makefile  run.sh
Test/jmeint_00/: Makefile
Test/polybench-c-4.2.1-beta-novra/: avg.py  outNormal.s  outTAFFO.s  run.sh  test.sh
Test/polybench-c-4.2.1-beta-novra/results/: result.txt
Test/sobel/: Makefile  run.sh
Test/sobel/src/: convolution.cpp
